--- a/src/style/Login.module.css
+++ b/src/style/Login.module.css
@@ -8,7 +8,8 @@ body {
 	height: 100vh;
 	background-image: url('./images/imageBackground.svg');
 	background-size: cover;
-	background-repeat: no-repeat;
+	/* background-repeat: no-repeat; */
+	/* padding: 20px; */
 }
 
 #main {
