--- a/src/style/Wallet.module.css
+++ b/src/style/Wallet.module.css
@@ -6,6 +6,7 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
+	/* margin-bottom: 20px; */
 }
 
 #divBranco {
@@ -23,7 +24,7 @@
 
 #divAzul {
 	width: 1155px;
-	height: 464px;
+	height: auto;
 	background: #003BE5;
 	box-shadow: -4px 9px 13px rgba(3, 107, 82, 0.3);
 	border-radius: 10px;
@@ -31,6 +32,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	margin-bottom: 20px;
 }
 
 
