--- a/src/style/Table.module.css
+++ b/src/style/Table.module.css
@@ -1,59 +1,67 @@
 #table {
-	/* background-color: red; */
-	margin-top: 265px;
-	width: 1040px;
-	height: 50px;
-	margin-bottom: 145.8px;
+  height: 50px;
+  margin-bottom: 145.8px;
+
+  /* background-color: red; */
+  margin-top: 265px;
+  width: 1040px;
 }
 
 .theader {
-	/* background-color: blue; */
-	color: white;
-	/* border: 1px solid black; */
-	border-collapse: collapse;
-	padding: 10px 10px;
-  border-left: 1px solid #FFFFFF;
-	margin-right: 50px;
-	border-bottom: 1px solid #FFFFFF;
-	font-style: normal;
-	font-weight: 700;
-	font-size: 12px;
-	line-height: 13px;
-	/* padding-bottom: 50px; */
+  border-bottom: 1px solid #fff;
+
+  /* border: 1px solid black; */
+  border-collapse: collapse;
+  border-left: 1px solid #fff;
+
+  /* background-color: blue; */
+  color: white;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 13px;
+  margin-right: 50px;
+  padding: 10px;
+
+  /* padding-bottom: 50px; */
 }
 
 .theaderEspecial {
-	/* background-color: blue; */
-	color: white;
-	padding: 10px 10px;
-	/* margin-right: 5px; */
-	border-bottom: 1px solid #FFFFFF;
-	font-style: normal;
-	font-weight: 700;
-	font-size: 12px;
-	line-height: 13px;
+
+  /* margin-right: 5px; */
+  border-bottom: 1px solid #fff;
+
+  /* background-color: blue; */
+  color: white;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 13px;
+  padding: 10px;
 }
 
 .td {
-	padding: 10px 10px;
-	text-align: center;
-	font-style: normal;
-	font-weight: 500;
-	font-size: 12px;
-	line-height: 13px;
-	color: #2FC18C;
-	border-bottom: 1px solid #2FC18C;
+  border-bottom: 1px solid #2fc18c;
+  color: #2fc18c;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 13px;
+  padding: 10px;
+  text-align: center;
 }
 
 .images {
-	background: transparent;
-	/* width: 60px; */
-	border: none;
-	flex-direction: row;
-	/* align-items: flex-end; */
-	margin-top: 6px;
+  background: transparent;
+
+  /* width: 60px; */
+  border: none;
+  flex-direction: row;
+
+  /* align-items: flex-end; */
+  margin-top: 6px;
 }
 
 .images:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
